2006-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.edgelist) : added

	* interfaces/R/igraph/R/conversion.R (get.edgelist) : names argument 
	added
	* interfaces/R/igraph/R/print.R (print.igraph) : updated
	* interfaces/R/igraph/R/community.R (edge.type.matrix) : updated
	* interfaces/R/igraph/R/plot.R (rglplot) : updated

	* interfaces/R/igraph/R/flow.R (graph.maxflow) : added
	* interfaces/R/src/rinterface.R (R_igraph_maxflow) : added
	
2006-09-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : loop edges added

	* interfaces/R/igraph/R/plot.R (plot.igraph) : more advanced loops
	* interfaces/R/igraph/R/tkplot.R (tkplot, .tkplot.update.edge)
	(.tkplot.create.edge) : loop edges added
	
2006-09-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/interace.R (add.vertices, add.edges) :
	attr argument added
	* interfaces/R/igraph/R/structure.generators.R (graph.data.frame) : 
	added

	* interfaces/R/igraph/R/structure.generators.R (graph.data.frame) : 
	directed argument added
	
2006-09-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (graph.density) : added
	* interfaces/R/src/rinterface.c (R_igraph_density) : added

	* interfaces/R/igraph/R/interface.R (add.edges) : attribute handling
	added

	* interfaces/R/igraph/R/interface.R (add.vertices) : attribute handling
	added
	
2006-09-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (grg.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_grg_game) : added

2006-09-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (get.adjacency) : added 'attr', 
	'names' and 'binary' arguments

2006-08-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (bonpow) : added, 
	ported from SNA

2006-08-21  Gabor Csardi  <csardi@rmki.kfki.hu>
